# youtube-tui

./: .gitignore  README.md  pyproject.toml
scripts/: termux-setup.sh
youtube_tui/: __init__.py  __main__.py  app.py  models.py  player.py  search.py  storage.py
youtube_tui/panels/: __init__.py  favorites.py  history.py  now_playing.py  queue.py  search.py
youtube_tui/screens/: __init__.py  favorites.py  history.py  now_playing.py  queue.py  search.py
youtube_tui/widgets/: __init__.py  mini_player.py  queue_list.py
