[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-tui"
version = "0.1.0"
description = "TUI para tocar musicas do YouTube no Termux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vitor" }]
dependencies = [
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "textual[dev]>=0.47.0",
]

[project.scripts]
youtube-tui = "youtube_tui.__main__:main"

[tool.setuptools.packages.find]
include = ["youtube_tui*"]